--- a/web/templates/partials/pages/structures.html
+++ b/web/templates/partials/pages/structures.html
@@ -190,10 +190,10 @@ put(n)</code></pre>
 
     <button
       type="button"
-      onclick="document.getElementById('link-8')?.click()"
+      onclick="document.getElementById('link-10')?.click()"
       class="inline-flex items-center justify-center gap-2 rounded-lg px-4 py-2 bg-gray-800 text-gray-100 hover:bg-gray-700 cursor-pointer w-full sm:w-auto"
     >
-      <span class="font-medium">Standard Library</span>
+      <span class="font-medium">Scope and Lifetime</span>
       <span aria-hidden="true">&rarr;</span>
     </button>
   </div>
