--- a/web/templates/partials/pages/variables.html
+++ b/web/templates/partials/pages/variables.html
@@ -146,7 +146,7 @@ $PI = 3.14159   # error: cannot assign to constant</code></pre>
   <div class="flex flex-col sm:flex-row gap-3">
     <button
       type="button"
-      onclick="document.getElementById('link-2')?.click()"
+      onclick="document.getElementById('link-values')?.click()"
       class="inline-flex items-center justify-center gap-2 rounded-lg px-4 py-2 bg-gray-900 text-gray-200 border border-gray-700 hover:bg-gray-800 cursor-pointer w-full sm:w-auto"
     >
       <span aria-hidden="true">&larr;</span>
@@ -155,7 +155,7 @@ $PI = 3.14159   # error: cannot assign to constant</code></pre>
 
     <button
       type="button"
-      onclick="document.getElementById('link-4')?.click()"
+      onclick="document.getElementById('link-expressions')?.click()"
       class="inline-flex items-center justify-center gap-2 rounded-lg px-4 py-2 bg-gray-800 text-gray-100 hover:bg-gray-700 cursor-pointer w-full sm:w-auto"
     >
       <span class="font-medium">Expressions and Operators</span>
