--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -56,7 +56,7 @@
       <!-- Nav -->
       <nav class="p-3 space-y-1">
         <a
-        id="link-0"
+        id="link-start"
         hx-get="/docs/start"
         hx-target="#main-content"
         hx-swap="innerHTML show:top"
@@ -68,7 +68,7 @@
         </a>
 
         <a
-          id="link-1"
+          id="link-basics"
           hx-get="/docs/basics"
           hx-target="#main-content"
           hx-swap="innerHTML show:top"
@@ -79,7 +79,7 @@
         </a>
 
         <a
-          id="link-2"
+          id="link-values"
           hx-get="/docs/values"
           hx-target="#main-content"
           hx-swap="innerHTML show:top"
@@ -90,7 +90,7 @@
         </a>
 
         <a 
-          id="link-3"
+          id="link-variables"
           hx-get="/docs/variables"
           hx-target="#main-content"
           hx-swap="innerHTML show:top"
@@ -101,7 +101,7 @@
         </a>
 
         <a
-          id="link-4"
+          id="link-expressions"
           hx-get="/docs/expressions"
           hx-target="#main-content"
           hx-swap="innerHTML show:top"
@@ -112,7 +112,7 @@
         </a>
 
         <a
-          id="link-5"
+          id="link-control"
           hx-get="/docs/control"
           hx-target="#main-content"
           hx-swap="innerHTML show:top"
@@ -123,7 +123,7 @@
         </a>
 
         <a
-          id="link-6"
+          id="link-functions"
           hx-get="/docs/functions"
           hx-target="#main-content"
           hx-swap="innerHTML show:top"
@@ -134,7 +134,7 @@
         </a>
 
         <a
-          id="link-7"
+          id="link-structures"
           hx-get="/docs/structures"
           hx-target="#main-content"
           hx-swap="innerHTML show:top"
@@ -145,7 +145,7 @@
         </a>
 
         <a
-        id="link-10"
+        id="link-scope"
         hx-get="/docs/scope"
         hx-target="#main-content"
         hx-swap="innerHTML show:top"
@@ -156,7 +156,7 @@
         </a>
         
         <a
-          id="link-9"
+          id="link-errors"
           hx-get="/docs/errors"
           hx-target="#main-content"
           hx-swap="innerHTML show:top"
