--- a/web/templates/partials/pages/basics.html
+++ b/web/templates/partials/pages/basics.html
@@ -148,7 +148,7 @@ put(name + ' is ' + str(answer42))</code></pre>
   <div class="flex flex-col sm:flex-row gap-3">
     <button
       type="button"
-      onclick="document.getElementById('link-0')?.click()"
+      onclick="document.getElementById('link-start')?.click()"
       class="inline-flex items-center justify-center gap-2 rounded-lg px-4 py-2 bg-gray-900 text-gray-200 border border-gray-700 hover:bg-gray-800 cursor-pointer w-full sm:w-auto"
     >
       <span aria-hidden="true">&larr;</span>
@@ -157,7 +157,7 @@ put(name + ' is ' + str(answer42))</code></pre>
 
     <button
       type="button"
-      onclick="document.getElementById('link-2')?.click()"
+      onclick="document.getElementById('link-values')?.click()"
       class="inline-flex items-center justify-center gap-2 rounded-lg px-4 py-2 bg-gray-800 text-gray-100 hover:bg-gray-700 cursor-pointer w-full sm:w-auto"
     >
       <span class="font-medium">Values and Types</span>
